--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
       name="description"
       content="montedev helps businesses streamline operations with custom software."
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="montedev" />
+    <meta
+      property="og:description"
+      content="montedev helps businesses streamline operations with custom software."
+    />
+    <meta property="og:url" content="https://montedev.me/" />
+    <meta property="og:image" content="https://montedev.me/montedev.me.png" />
+
     <title>montedev</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
